# py-pricer

./: .gitignore  LICENSE  MANIFEST.in  README.md  current-state.md  prepare_local_env.sh  pyproject.toml  requirements.txt  run_api.py  run_app.py  scope.md  test_api.py
algorithms/: README.md  config.py
algorithms/data/: 1.json  10.json  11.json  2.json  3.json  5.json  quotes_batch.json
algorithms/data/additional/: claims.parquet
algorithms/data/individual/: 1.json  10.json  11.json  2.json  3.json  5.json
algorithms/pipeline/: additional_transforms.py  continuous-banding.json  data_processor.py  utils.py
algorithms/rating/: __init__.py  rating_engine.py  rating_engine.py.bak
algorithms/rating/tables/: Area.csv  VehAge_rating.csv  VehPower_x_DrivAge.csv  __init__.py  base-values.csv
algorithms/rating/utils/: table_loader.py
algorithms/transformations/: category-index.json  continuous-banding.json  factor-config.py  transform.py
api/: Dockerfile  README.md  __init__.py  api.py  api_launcher.py  deploy.sh  models.py  run_api.py  test_api.py  utils.py
py_pricer/: __init__.py  api.py  api_launcher.py  app.py  app_launcher.py  config.py  data_processor.py  deploy.py  init_env.py  initializer.py  initializer_launcher.py  logging_config.py  rating.py  transformer.py  utils.py
streamlit/: app.py  banded_data.py  indexed_data.py  rated_data.py  raw_data.py
