[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-pricer"
version = "0.1.0"
authors = [
    {name = "Insurance Pricing Team"}
]
description = "A Python library for insurance pricing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
    "streamlit>=1.30.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/py-pricer"
"Bug Tracker" = "https://github.com/yourusername/py-pricer/issues"

[tool.setuptools]
packages = ["py_pricer"]

[tool.uv]
python-version = "3.8"
