[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_pricer"
version = "0.1.0"
authors = [
    {name = "Insurance Pricing Team"}
]
description = "A Python library for insurance pricing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
    "streamlit>=1.30.0",
    "typing-extensions>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "python-json-logger>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/py-pricer"
"Bug Tracker" = "https://github.com/yourusername/py-pricer/issues"

[project.scripts]
py-pricer-app = "py_pricer.app_launcher:launch_app"
py-pricer-api = "py_pricer.api_launcher:launch_api"
py-pricer-init = "py_pricer.initializer_launcher:launch_initializer"

[tool.setuptools]
packages = ["py_pricer"]
include-package-data = true

# Templates are now downloaded from GitHub during initialization
# instead of being included in the package

[tool.uv]
python-preference = "system"
